Twitter & History gap/padding fixed

--- a/styles/history.module.sass
+++ b/styles/history.module.sass
@@ -14,7 +14,10 @@
   .container
     display: flex
     justify-content: center
-    padding: rem(25) rem(25) rem(125)
+    padding: rem(25) 0 rem(125)
+
+    +mq(minSmall)
+      padding: 0 0 rem(125)
 
   .list
     display: flex
@@ -25,9 +28,15 @@
       flex-direction: column
 
     +mq(minMedium)
-      gap: rem(15)
+      gap: rem(25)
+      padding: 0 rem(25)
 
     .articles
+      padding: rem(25) rem(25) 0
+
+      +mq(minMedium)
+        max-height: calc(100dvh - rem(190))
+
       h3
         padding-bottom: rem(15)
         font-size: rem(20)
@@ -37,6 +46,7 @@
 
       +mq(minMedium)
         +col
+        padding: rem(25) 0
         font-size: rem(24)
 
 .accordion
